--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-select",
-  "version": "3.4.0",
+  "version": "3.4.1",
   "description": "Everything you wish the HTML <select> element could do, wrapped up into a lightweight, extensible Vue component.",
   "author": "Jeff Sagal <sagalbot@gmail.com>",
   "homepage": "https://vue-select.org",
@@ -102,5 +102,8 @@
       "html",
       "text-summary"
     ]
+  },
+  "dependencies": {
+    "fuse.js": "^3.4.6"
   }
 }
