--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-select",
-  "version": "3.4.3",
+  "version": "3.4.4",
   "description": "Everything you wish the HTML <select> element could do, wrapped up into a lightweight, extensible Vue component.",
   "author": "Jeff Sagal <sagalbot@gmail.com>",
   "homepage": "https://vue-select.org",
@@ -10,6 +10,13 @@
   },
   "private": false,
   "main": "dist/vue-select.js",
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json",
+    "*.js"
+  ],
   "license": "MIT",
   "prepare": "npm run build",
   "scripts": {
