--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-select",
-  "version": "3.4.4",
+  "version": "3.4.5",
   "description": "Everything you wish the HTML <select> element could do, wrapped up into a lightweight, extensible Vue component.",
   "author": "Jeff Sagal <sagalbot@gmail.com>",
   "homepage": "https://vue-select.org",
@@ -13,9 +13,7 @@
   "files": [
     "dist/*",
     "src/*",
-    "public/*",
-    "*.json",
-    "*.js"
+    "public/*"
   ],
   "license": "MIT",
   "prepare": "npm run build",
